--- a/src/styles/global-styles.css
+++ b/src/styles/global-styles.css
@@ -29,6 +29,7 @@ body {
   color: #04589b; 
 }
 
+
 article,
 aside,
 details,
@@ -355,6 +356,11 @@ footer a {
   padding: 20px 16px;
 }
 
+.add-car {
+  position:relative;
+  margin-top: 16px;
+}
+
 .licenceno {
   margin-right: 10px;
 }
@@ -364,6 +370,7 @@ footer a {
   border-radius: 8px;
   box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 1px 1px 2px 1px rgba(0,0,0,0.09);
   padding: 8px 0 0 0;
+  margin-top: 16px;
 }
 
 .driver-name {
@@ -397,4 +404,20 @@ footer a {
   background: #f7f7f7;
   border-radius: 0 0 8px 8px;
   border-top: 1px solid #e3e3e3;
+}
+
+.driver-card {
+  display: flex;
+  align-items: center;
+  line-height: 40px;
+  padding: 0 16px 0 16px;
+
+}
+
+.driver-card p {
+  margin: 0 0 0 8px;
+}
+
+.driver-card .link {
+  margin-left: auto;
 }
