--- a/src/styles/global-styles.css
+++ b/src/styles/global-styles.css
@@ -121,7 +121,11 @@ label {
 }
 
 .page-head-wrap {
-  padding: 20px 10px;
+  padding: 20px 0 20px 0;
+}
+
+.page-head-wrap h1 {
+  margin: 0 10px 0 10px;
 }
 
 /******* Form field wrappers *********/
@@ -138,8 +142,7 @@ h1 {
   padding-bottom: 10px;
 }
 
-.questions-wrapper > h3,
-.questions-wrapper h4 {
+.questions-wrapper > h3{
   margin-left: 10px;
 }
 
