Drivers for car are submitting

--- a/src/styles/global-styles.css
+++ b/src/styles/global-styles.css
@@ -190,7 +190,10 @@ h1 {
   width: 100%;
 }
 
-
+.questions-wrapper .link {
+  margin-left: 16px;
+  font-weight: 700;
+}
 
 /******* Radio buttons group rules *********/
 
