--- a/src/styles/global-styles.css
+++ b/src/styles/global-styles.css
@@ -427,3 +427,15 @@ footer a {
 .driver-card .link {
   margin-left: auto;
 }
+
+/******************************************HOME***********************************/
+
+.address-wrap {
+  padding: 8px 16px 0 16px;
+  font-weight: 600;
+  border-bottom: 1px solid #eee;
+}
+
+.address-wrap .link {
+  margin-left: 0;
+}
