--- a/src/styles/global-styles.css
+++ b/src/styles/global-styles.css
@@ -457,3 +457,22 @@ footer a {
   padding: 8px;
   margin-bottom: 16px;
 }
+
+.item-card .item-type {
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+
+.item-card .description-value {
+  display: flex;
+  justify-content: space-between;
+}
+
+.description-value p {
+  margin-bottom: 0;
+  margin-block-end: 0;
+}
+
+.item-card p {
+  margin-top: 0;
+}
