--- a/src/styles/global-styles.css
+++ b/src/styles/global-styles.css
@@ -52,7 +52,7 @@ header {
 }
 
 .container {
-  background: #f1f5f8;
+  background: #fcf9f2;
   width: 320px;
   margin: 0 auto;
   position: relative;
@@ -149,10 +149,16 @@ h1 {
 .questions-wrapper {
   background: #fff;
   padding-bottom: 10px;
+  box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 1px 1px 2px 1px rgba(0,0,0,0.09);
+  border-radius: 8px;
 }
 
 .questions-wrapper > h3{
   margin-left: 10px;
+}
+
+.builder-wrapper>.questions-wrapper {
+  padding: 8px 8px 16px 8px;
 }
 
 .qwrap {
@@ -327,7 +333,6 @@ input[type="checkbox"]:checked + label {
 
 /******* Footer rules *********/
 footer {
-  background-color: #eee;
   min-height: 60px;
   padding: 20px 0 20px 0;
 }
