--- a/src/styles/global-styles.scss
+++ b/src/styles/global-styles.scss
@@ -66,6 +66,15 @@ summary {
   display: block;
 }
 
+main {
+  position: relative;
+}
+
+main img {
+  max-width: 100%;
+}
+
+
 header {
   width: 100%;
   min-height: 60px;
@@ -91,9 +100,10 @@ h1, h2, h3 {
 }
 
 h1 {
-  font-size: 32px;
-  line-height: 36px;
-  font-weight: 500;
+  font-size: 50px;
+  line-height: 55px;
+  font-weight: 600;
+  color: $accessible-green;
 }
 
 h2 {
@@ -287,8 +297,11 @@ h1 {
   }
 }
 
-.bikes, .items {
+.bikes, .items, .cars {
   display: flex;
+  flex-wrap: wrap;
+  align-items: start;
+  justify-content: space-between;
 }
 
 /******* Radio buttons group rules *********/
@@ -371,7 +384,7 @@ input[type="radio"] {
 }
   input[type="checkbox"] {
     z-index: 300;
-    margin-left: 10px;
+    margin-left: 10px; 
     cursor: pointer;
     appearance: none;
     border: none;
@@ -606,6 +619,7 @@ button.btn-x-small {
 .add-car {
   position:relative;
   margin-top: 16px;
+  max-width: 49%;
 }
 
 .licenceno {
@@ -616,8 +630,15 @@ button.btn-x-small {
   background: #fff;
   border-radius: 8px;
   box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 1px 1px 2px 1px rgba(0,0,0,0.09);
-  padding: 8px 0 0 0;
-  margin-top: 16px;
+  margin-top: 16px; 
+}
+
+.car-card {
+  max-width: 49%;
+
+  img {
+    max-width: 100%;
+  }
 }
 
 .driver-name {
